# bucksaw

./: .env.example  .firebaserc  .gitignore  COMPARISON.md  Cargo.toml  DOCUMENTATION.md  PID_TUNING_GUIDE.md  README.md  app.yaml  btfl_005.bbl  build.rs  firebase.json  index.html  publish_wasm.md  wasmer.toml
.firebase/: hosting.ZGlzdA.cache
assets/: manifest.json  sw.js
scripts/: build-macos-package.sh
src/: ai_integration.rs  analytics.rs  app_logger.rs  flight_data.rs  gui.rs  log_file.rs  main.rs  settings.rs  step_response.rs  utils.rs
src/gui/: flight_view.rs  loading_modal.rs  open_file.rs  opened_file.rs  tabs.rs  toast.rs  welcome.rs
src/gui/tabs/: anomalies.rs  dashboard.rs  error.rs  feedforward.rs  filter.rs  logs.rs  plot.rs  setup.rs  stats.rs  suggestions.rs  tune.rs  tuning_guide.rs  vibe.rs
