[package]
name = "pid-lab"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KoffeinFlummi/bucksaw"

[dependencies]
log = "0.4.21"
anyhow = "1.0.86"
itertools = "0.13.0"
blackbox-log = "0.4.2"
realfft = "3.3.0"
colorgrad = { version = "0.6.2", default-features = false }

eframe = { version = "0.27.2", default-features = false, features = ["glow", "x11", "wayland", "default_fonts"] }
egui = { version = "0.27.2", default-features = false }
egui_plot = { version = "0.27.2", default-features = false }
egui_extras = { version = "0.27.2", default-features = false, features = ["image", "file"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rfd = "0.13"

# AI Integration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#egui_oszi = { git = "https://github.com/dfsilva/egui_oszi" }
egui_oszi = { path = "./egui_oszi" }

# Used for profiling
puffin = { version = "0.19", optional = true }
puffin_egui = { version = "0.27", optional = true }

# Only for native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
futures = "0.3.28"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "5.0"

# Only for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
async-std = "1.12.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
profiling = ["dep:puffin", "dep:puffin_egui"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
